Update 2020-01-21-Elastic_installation.md